cluster/broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker
  namespace: kafka
  labels:
    app: kafka
    component: broker
    type: headless
spec:
  clusterIP: None
  ports:
  - port: 9092
    targetPort: 9092
    name: external
  - port: 19092
    targetPort: 19092
    name: internal
  selector:
    app: kafka-broker
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-client
  namespace: kafka
  labels:
    app: kafka
    component: client
    type: clusterip
spec:
  type: ClusterIP
  ports:
  - port: 9092
    targetPort: 9092
    name: client
  selector:
    app: kafka-broker
