cluster/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-controller
  namespace: kafka
  labels:
    app: kafka
    component: controller
    type: headless
spec:
  clusterIP: None
  ports:
  - port: 29093
    targetPort: 29093
    name: controller
  selector:
    app: kafka-controller
