cluster/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-controller-headless
  namespace: kafka
spec:
  clusterIP: None
  ports:
  - port: 29093
    targetPort: 29093
    name: controller
  selector:
    app: kafka-controller
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker-headless
  namespace: kafka
spec:
  clusterIP: None
  ports:
  - port: 9092
    targetPort: 9092
    name: client
  - port: 19092
    targetPort: 19092
    name: internal
  selector:
    app: kafka-broker
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: kafka
spec:
  type: ClusterIP
  ports:
  - port: 9092
    targetPort: 9092
    name: client
  selector:
    app: kafka-broker
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-0
  namespace: kafka
spec:
  type: ClusterIP
  ports:
  - port: 9092
    targetPort: 9092
    name: client
  selector:
    app: kafka-broker
    statefulset.kubernetes.io/pod-name: kafka-broker-0
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-1
  namespace: kafka
spec:
  type: ClusterIP
  ports:
  - port: 9093
    targetPort: 9092
    name: client
  selector:
    app: kafka-broker
    statefulset.kubernetes.io/pod-name: kafka-broker-1
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-2
  namespace: kafka
spec:
  type: ClusterIP
  ports:
  - port: 9094
    targetPort: 9092
    name: client
  selector:
    app: kafka-broker
    statefulset.kubernetes.io/pod-name: kafka-broker-2
